editing css and HTML pages

--- a/public/welcome/welcome.html
+++ b/public/welcome/welcome.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agents Page</title>
-    <link rel="stylesheet" href="./agents.css"/>
+    <title>Welcome!</title>
+    <link rel="stylesheet" href="welcome.css">
 </head>
 <body>
     <nav class="navbar">
@@ -26,25 +26,13 @@
                     <a href="../favorite_agents/favorite.html" class="navbar__links">Favorited Agents</a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="../login.html" class="button">Signout</a>
+                    <a href="../home/home.html" class="button">Signout</a>
                 </li>
             </ul>
         </div>
     </nav>
-
-<div class = 'main'>
-    <div class="main-container">
-        <div class="main__content">
-
-            <div id="agent__container">
-
-            </div>
-        </div>
-    </div>
-</div>
-
-
-<script src="../../node_modules/axios/dist/axios.min.js"></script>
-    <script src="./main.js"></script>
+    <h2 id="welcome-banner">
+        Welcome, 
+    </h2>
 </body>
 </html>
