--- a/public/home/home.html
+++ b/public/home/home.html
@@ -19,14 +19,8 @@
                 <span class="bar"></span>
             </div>
             <ul class="navbar__menu">
-                <li class="navbar__item">
-                    <a href="/Agents.html" class="navbar__links">Agents</a>
-                </li>
-                <li class="navbar__item">
-                    <a href="/" class="navbar__links">Favorited Agents</a>
-                </li>
                 <li class="navbar__btn">
-                    <a href="../login.html" class="button">Login/Signup</a>
+                    <a href="../login/login.html" class="button">Login/Signup</a>
                 </li>
             </ul>
         </div>
