Added CSS styling and implementing smaller features

--- a/public/favorite_agents/favorite.html
+++ b/public/favorite_agents/favorite.html
@@ -20,13 +20,13 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="/Agents.html" class="navbar__links">Agents</a>
+                    <a href="../agents/agents.html" class="navbar__links">Agents</a>
                 </li>
                 <li class="navbar__item">
                     <a href="../favorite_agents/favorite.html" class="navbar__links">Favorited Agents</a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="../login.html" class="button">Signout</a>
+                    <a href="../home/home.html" class="button">Signout</a>
                 </li>
             </ul>
         </div>
