--- a/public/home/home.html
+++ b/public/home/home.html
@@ -13,6 +13,7 @@
             <a href="/" id="navbar__logo">
                 <img src = "https://images.cults3d.com/4QqRV9kLYYEuw9ur_X3yjQl1sjk=/516x516/https://files.cults3d.com/uploaders/15024335/illustration-file/a86d53e4-2bd9-4a8f-9550-986686c3131a/gi0mAjIh_400x400.png">
             </a>
+            <h1>Valorant</h1>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -27,12 +28,18 @@
     </nav>
 
     <div class = 'main'>
-        <div class="main-container">
+        <div class="main__container">
             <div class="main__content">
                 <h1>VALORANT</h1>
                 <h2>WIKI</h2>
-                <p>Sign up to learn more about the agents!</p>
+                <p>Sign up to learn more about the game and their agents!</p>
             </div>
+            <div class="main__img--container">
+                <img src="../images/fade.png" alt="valorant" id="main__img">
+            </div>
+            <video id="background-video" autoplay loop muted>
+                <source src="../videos/agent-background-generic.mp4" type = video/mp4>
+            </video>
         </div>
     </div>
     <script src = "app.js"></script>
