--- a/public/welcome/welcome.html
+++ b/public/welcome/welcome.html
@@ -20,12 +20,12 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="/Agents.html" class="navbar__links">Agents</a>
+                    <a href="../agents/agents.html" class="navbar__links">Agents</a>
                 </li>
                 <li class="navbar__item">
                     <a href="../favorite_agents/favorite.html" class="navbar__links">Favorited Agents</a>
                 </li>
-                <li class="navbar__btn">
+                <li class="navbar__btn" id="signout">
                     <a href="../home/home.html" class="button">Signout</a>
                 </li>
             </ul>
@@ -34,5 +34,7 @@
     <h2 id="welcome-banner">
         Welcome, 
     </h2>
+
+    <script src="./welcome.js"></script>
 </body>
 </html>
