added CSS styling and implemented features

--- a/public/login/login.html
+++ b/public/login/login.html
@@ -12,7 +12,6 @@
         <h1>Login or Register</h1>
     </header>
     <main>
-
     <form id="login-form">
         <h1>Log In</h1>
         <input 
@@ -52,12 +51,12 @@
           id="register-password-2"
           placeholder='Confirm Password'/>
       <button>Register</button>
+</video>
   </form>
-
+  
     <section id="user-info"></section>
-
     </main>
-
+    
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="index.js"></script>
 </body>
