--- a/public/agents/agents.html
+++ b/public/agents/agents.html
@@ -20,7 +20,7 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="/Agents.html" class="navbar__links">Agents</a>
+                    <a href="../agents/agents.html" class="navbar__links">Agents</a>
                 </li>
                 <li class="navbar__item">
                     <a href="../favorite_agents/favorite.html" class="navbar__links">Favorited Agents</a>
