--- a/public/agents/agents.html
+++ b/public/agents/agents.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agents Page</title>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"><link rel="stylesheet" href="./test.css">
     <link rel="stylesheet" href="./agents.css"/>
 </head>
 <body>
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="/" id="navbar__logo">
+            <a href="../welcome/welcome.html" id="navbar__logo">
                 <img src = "https://images.cults3d.com/4QqRV9kLYYEuw9ur_X3yjQl1sjk=/516x516/https://files.cults3d.com/uploaders/15024335/illustration-file/a86d53e4-2bd9-4a8f-9550-986686c3131a/gi0mAjIh_400x400.png">
             </a>
             <div class="navbar__toggle" id="mobile-menu">
@@ -26,7 +27,7 @@
                     <a href="../favorite_agents/favorite.html" class="navbar__links">Favorited Agents</a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="../login.html" class="button">Signout</a>
+                    <a href="../login/login.html" class="button">Signout</a>
                 </li>
             </ul>
         </div>
@@ -43,8 +44,8 @@
     </div>
 </div>
 
-
+<script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="./script.js"></script>
 <script src="../../node_modules/axios/dist/axios.min.js"></script>
-    <script src="./main.js"></script>
+<script src="./main.js"></script>
 </body>
 </html>
