delete feature implemented

--- a/public/favorite_agents/favorite.html
+++ b/public/favorite_agents/favorite.html
@@ -26,7 +26,7 @@
                     <a href="../favorite_agents/favorite.html" class="navbar__links">Favorited Agents</a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="../home/home.html" class="button">Signout</a>
+                    <a href="../home/home.html" class="button" id="signout">Signout</a>
                 </li>
             </ul>
         </div>
