--- a/public/agents/agents.html
+++ b/public/agents/agents.html
@@ -27,7 +27,7 @@
                     <a href="../favorite_agents/favorite.html" class="navbar__links">Favorited Agents</a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="../login/login.html" class="button">Signout</a>
+                    <a href="../home/home.html" class="button" id="signout">Signout</a>
                 </li>
             </ul>
         </div>
