revised HTML + deleted files

--- a/public/favorite_agents/favorite.html
+++ b/public/favorite_agents/favorite.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="../welcome/welcome.html" id="navbar__logo">
+            <a href="../agents/agents.html" id="navbar__logo">
                 <img src = "https://images.cults3d.com/4QqRV9kLYYEuw9ur_X3yjQl1sjk=/516x516/https://files.cults3d.com/uploaders/15024335/illustration-file/a86d53e4-2bd9-4a8f-9550-986686c3131a/gi0mAjIh_400x400.png">
             </a>
             <div class="navbar__toggle" id="mobile-menu">
@@ -32,7 +32,9 @@
         </div>
     </nav>
 
-
+    <div id='favoriteTitle'>
+        <h1 id="favorite">Favorited Agents</h1>
+    </div>
     <div id="agent__container">
     </div>
     <script src="../../node_modules/axios/dist/axios.min.js"></script>
