--- a/public/agents/agents.html
+++ b/public/agents/agents.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="../welcome/welcome.html" id="navbar__logo">
+            <a href="../agents/agents.html" id="navbar__logo">
                 <img src = "https://images.cults3d.com/4QqRV9kLYYEuw9ur_X3yjQl1sjk=/516x516/https://files.cults3d.com/uploaders/15024335/illustration-file/a86d53e4-2bd9-4a8f-9550-986686c3131a/gi0mAjIh_400x400.png">
             </a>
             <div class="navbar__toggle" id="mobile-menu">
@@ -34,6 +34,11 @@
     </nav>
 
 <div class = 'main'>
+    <div id="welcome">
+        <h2 id="welcome-banner">
+            Welcome, 
+        </h2>
+    </div>
     <div class="main-container">
         <div class="main__content">
 
