--- a/public/login/login.html
+++ b/public/login/login.html
@@ -11,6 +11,7 @@
     <header>
         <h1>Login or Register</h1>
     </header>
+<div class = 'main'>
     <main>
     <form id="login-form">
         <h1>Log In</h1>
@@ -51,11 +52,10 @@
           id="register-password-2"
           placeholder='Confirm Password'/>
       <button>Register</button>
-</video>
   </form>
-  
     <section id="user-info"></section>
     </main>
+</div>
     
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="index.js"></script>
