--- a/public/agents/agents.html
+++ b/public/agents/agents.html
@@ -26,6 +26,12 @@
                 <li class="navbar__item">
                     <a href="../favorite_agents/favorite.html" class="navbar__links">Favorited Agents</a>
                 </li>
+                <li class="navbar__item">
+                    <a href="../skins/skins.html" class="navbar__links">Skins</a>
+                </li>
+                <li class="navbar__item">
+                    <a href="../favorite_skins/favoriteskin.html" class="navbar__links">Skins Wishlist</a>
+                </li>
                 <li class="navbar__btn">
                     <a href="../home/home.html" class="button" id="signout">Signout</a>
                 </li>
@@ -41,9 +47,8 @@
     </div>
     <div class="main-container">
         <div class="main__content">
-
             <div id="agent__container">
-
+        
             </div>
         </div>
     </div>
